--- a/src/App.css
+++ b/src/App.css
@@ -187,3 +187,87 @@ input:focus, textarea:focus, select:focus {
   font-weight: 600;
   cursor: pointer;
 }
+
+/************ Dashboard ************/
+.dashboard-container {
+  width: 100%;
+  height: 100%;
+}
+
+.dashboard-container button {
+  background-color: transparent;
+  border: 2px solid #007bff;
+  color: #007bff;
+  padding: 10px 20px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  width: 150px; 
+  margin: 3px;
+}
+
+.dashboard-container button:hover {
+  background-color: #007bff;
+  color: white;
+}
+
+.actions-button {
+  width: 100px;
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+th, td {
+  padding: 8px; 
+  text-align: center; 
+}
+
+
+/******* Email Verification *******/
+.email-container button {
+  padding: 5px;
+  margin: 10px;
+  background-color: transparent;
+  border: 2px solid #007bff;
+  color: #007bff;
+  padding: 10px 20px;
+  margin-top: 10px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+.email-container button:hover {
+  background-color: #007bff;
+  color: white;
+}
+
+/******** Password Reset *********/
+.password-reset-container button {
+  padding: 5px;
+  margin: 10px;
+  background-color: transparent;
+  border: 2px solid #007bff;
+  color: #007bff;
+  padding: 10px 20px;
+  margin-top: 10px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+/* Hover effect for the buttons */
+.password-reset-container button:hover {
+  background-color: #007bff;
+  color: white;
+}
+
+/* Style for the reset password button */
+.reset-password-button {
+  margin-right: 10px; /* Adjust margin as needed */
+}
+
+/* Style for the resend verification button */
+.resend-verification-button {
+  margin-left: 10px; /* Adjust margin as needed */
+}
