Created Section, Footer, Card components with some basic styling

--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -5,6 +5,11 @@
   background-color: #f0f0f0;
   padding: 1rem;
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1000; /* Ensure it appears above other content */
 }
 
 .navbar-brand a {
@@ -29,3 +34,4 @@
   color: #555;
   text-decoration: none;
 }
+
